@@ -183,3 +183,16 @@ gametype WARSOWM new extend Q3M
     master query = empty full
     master for gametype = WARSOWS
 end
+
+gametype TREMULOUS new extend Q3S
+    name = Tremulous
+    template var = TREMULOUS
+    game rule = gamename
+end
+gametype TREMULOUSM new extend Q3M
+    name = Tremulous Master
+    template var = TREMULOUSMASTER
+    default port = 30710
+    master protocol = 69
+    master for gametype = TREMULOUS
+end
