@@ -1151,6 +1151,8 @@ static char *builtin_masters_update_info[] = {
   "ADD WARSOWS master://ghdigital.com ghdigital.com",
   "ADD WARSOWS master://dpmaster.deathmask.net dpmaster.deathmask.net",
 
+  "ADD TREMULOUS master://master.tremulous.net:30710 tremulous.net",
+
   "ADD QS lan://255.255.255.255 LAN",
   "ADD QWS lan://255.255.255.255 LAN",
   "ADD Q2S lan://255.255.255.255 LAN",
