@@ -1,0 +1,35 @@
+/* XPM */
+static char * tremulous_xpm[] = {
+"16 16 16 1",
+" 	c None",
+".	c #000000",
+"+	c #010101",
+"@	c #020202",
+"#	c #030303",
+"$	c #040404",
+"%	c #050505",
+"&	c #060606",
+"*	c #070707",
+"=	c #080808",
+"-	c #090909",
+";	c #0A0A0A",
+">	c #0B0B0B",
+",	c #0C0C0C",
+"'	c #0D0D0D",
+")	c #0E0E0E",
+"        &       ",
+"       =.+      ",
+" *     +..    $ ",
+" -+    ...#  #; ",
+"  %@   +..  .*  ",
+"   +# )...,+&   ",
+"    @@+....     ",
+"     %.....     ",
+"     $.....+    ",
+"  -$+......     ",
+"      .....,    ",
+"     *....++,   ",
+"     # #.@  #   ",
+"     &       >  ",
+"    '           ",
+"                "};
