@@ -133,6 +133,7 @@ enum server_type {
   NETP_SERVER,
   NEXUIZ_SERVER,
   WARSOW_SERVER,
+  TREMULOUS_SERVER,
   GPS_SERVER,
   UNKNOWN_SERVER
 };
